updated for the current Three.js

--- a/rendering_example/css/style.css
+++ b/rendering_example/css/style.css
@@ -1,9 +1,9 @@
 #canvas {
-    float: left;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    background-color: #111111;
-    width: 600px;
-    height: 600px;
+  float: left;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  background-color: #ffffff;
+  width: 600px;
+  height: 600px;
 }
